--- a/Promises/Practice.html
+++ b/Promises/Practice.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="script.js"></script>
+  <script src="Practice.js"></script>
 </body>
 </html>
