--- a/Interview Questions/ques5.html
+++ b/Interview Questions/ques5.html
@@ -3,20 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>
+    + operator convert number to string from right to left separately
+    - operator convert a string to a number
+    if we add anything with null so it will give us.
+
+    when we apply arithemetic operators to null so null value is 0.
+    null is only 1
+    undefined is only 1
+    NaN can be any value
+
+
+  </title>
 </head>
 <body>
   <script>
-    console.log(null+null);
-    console.log(undefined+undefined);
+    // console.log(null+null);
+    // console.log(null+6);
+    // console.log(6+null);
+    // console.log(6-null);
+    // console.log(6*null);
+    // console.log(null==null);
+    // console.log(null===null);
 
-    let a="null";
-    let b="undefined";
-    console.log(typeof a,typeof b);
+    // console.log(undefined+undefined);
+    // console.log(undefined==undefined);
+    // console.log(undefined===undefined);
 
-    let c=null;
-    let d=undefined;
-    console.log(typeof c,typeof d);
+
+    // let a="null";
+    // let b="undefined";
+    // console.log(typeof a,typeof b);
+
+    // let c=null;
+    // let d=undefined;
+    // console.log(typeof c,typeof d);
+
+    // console.log('4' + 5);     
+    // console.log('4' +  5 + 1);
+    // console.log(4 +  5 + '1');
+    // console.log('4' - 1);
+    // console.log('4' -  3 - 1);
+
+
 
   </script>
 </body>
