--- a/AsyncAwait/afterAsync1.html
+++ b/AsyncAwait/afterAsync1.html
@@ -7,11 +7,13 @@
 </head>
 <body>
   <script>
-    function value(){
-      console.log("Hello");
+    const p=new Promise((resolve,reject)=>{
+      resolve("Promise is resolved");
+    })
+    async function getData(){
+    return p;
     }
-    // value();
-    console.log(value);
+   getData().then((data)=>console.log(p,data));
   </script>
 </body>
 </html>
