--- a/AsyncAwait/beforeAsync1.html
+++ b/AsyncAwait/beforeAsync1.html
@@ -7,11 +7,14 @@
 </head>
 <body>
   <script>
-    function value(){
-      console.log("Hello");
-    }
-    // value();
-    console.log(value);
+   const p=new Promise((resolve,reject)=>{
+    resolve("promise is resolved");
+   })
+   function getData(){
+    return p;
+   }
+  getData().then((value)=>console.log(p,value));
   </script>
+
 </body>
 </html>
